--- a/core/ToDoList/ToDoList.vcxproj
+++ b/core/ToDoList/ToDoList.vcxproj
@@ -302,6 +302,7 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="TDCDialogHelper.cpp" />
     <ClCompile Include="TDCEnumContainers.cpp" />
     <ClCompile Include="TDCFilter.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -627,6 +628,7 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
     <ClInclude Include="TDCAnonymizeTasklist.h" />
     <ClInclude Include="tdccustomattribdata.h" />
     <ClInclude Include="TDCCustomAttributeHelper.h" />
+    <ClInclude Include="TDCDialogHelper.h" />
     <ClInclude Include="tdcenum.h" />
     <ClInclude Include="TDCEnumContainers.h" />
     <ClInclude Include="TDCFilter.h" />
