Separate license checking into separate files

--- a/Plugins/PluginHelpers/PluginHelpers.vcxproj.filters
+++ b/Plugins/PluginHelpers/PluginHelpers.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="TreeCtrl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RhinoLicensing.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -114,6 +117,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TreeCtrl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RhinoLicensing.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
