Port licensing to c# to aid obfuscation

--- a/Plugins/UIExension/WordCloudUIExtension/WordCloudUIExtensionCore/WordCloudUIExtensionCore.csproj
+++ b/Plugins/UIExension/WordCloudUIExtension/WordCloudUIExtensionCore/WordCloudUIExtensionCore.csproj
@@ -43,12 +43,16 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\..\Utils\Utils.cs">
+      <Link>Utils.cs</Link>
+    </Compile>
     <Compile Include="AttributeComboBox.cs">
       <SubType>Code</SubType>
     </Compile>
