--- a/Plugins/ContentControl/HTMLContentControl/HTMLContentControlCore/HTMLContentControlCore.csproj
+++ b/Plugins/ContentControl/HTMLContentControl/HTMLContentControlCore/HTMLContentControlCore.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
@@ -53,6 +54,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\..\Utils\Utils.cs">
+      <Link>Utils.cs</Link>
+    </Compile>
     <Compile Include="HTMLContentControlCore.cs" />
     <Compile Include="HTMLContentControlCore.Designer.cs">
       <AutoGen>True</AutoGen>
