--- a/Plugins/ContentControl/MDContentControl/MDContentControlCore/MDContentControlCore.csproj
+++ b/Plugins/ContentControl/MDContentControl/MDContentControlCore/MDContentControlCore.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xaml" />
@@ -57,6 +58,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\..\Utils\Utils.cs">
+      <Link>Utils.cs</Link>
+    </Compile>
     <Compile Include="MarkdownSharpEditorForm.cs">
       <SubType>Component</SubType>
     </Compile>
