--- a/Plugins/ImportExport/MarkdownImpExp/MarkdownImpExpCore/MarkdownImpExpCore.csproj
+++ b/Plugins/ImportExport/MarkdownImpExp/MarkdownImpExpCore/MarkdownImpExpCore.csproj
@@ -43,10 +43,14 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\..\Utils\Utils.cs">
+      <Link>Utils.cs</Link>
+    </Compile>
     <Compile Include="MarkdownImpExpCore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
