--- a/Plugins/UIExension/MindMapUIExtension/MindMapUIExtensionCore/MindMapUIExtensionCore.csproj
+++ b/Plugins/UIExension/MindMapUIExtension/MindMapUIExtensionCore/MindMapUIExtensionCore.csproj
@@ -42,12 +42,16 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\..\Utils\Utils.cs">
+      <Link>Utils.cs</Link>
+    </Compile>
     <Compile Include="MindMapControl.cs" />
     <Compile Include="MindMapControl.Designer.cs">
       <DependentUpon>MindMapControl.cs</DependentUpon>
