--- a/Plugins/UIExension/StatsUIExtension/StatsUIExtensionCore/StatsUIExtensionCore.csproj
+++ b/Plugins/UIExension/StatsUIExtension/StatsUIExtensionCore/StatsUIExtensionCore.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Security" />
     <Reference Include="system.windows.controls.datavisualization.toolkit">
       <HintPath>..\Debug\system.windows.controls.datavisualization.toolkit.dll</HintPath>
     </Reference>
@@ -53,6 +54,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\..\Utils\Utils.cs">
+      <Link>Utils.cs</Link>
+    </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
