--- a/Plugins/ImportExport/MarkdownImpExp/MarkdownImpExpCore/MarkdownImpExpCore.csproj
+++ b/Plugins/ImportExport/MarkdownImpExp/MarkdownImpExpCore/MarkdownImpExpCore.csproj
@@ -43,6 +43,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Security" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
