--- a/Plugins/ImportExport/SampleImpExp/SampleImpExpCore/SampleImpExpCore.csproj
+++ b/Plugins/ImportExport/SampleImpExp/SampleImpExpCore/SampleImpExpCore.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Security" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
