--- a/Plugins/ImportExport/HTMLReportExporter/HTMLReportExporterCore/HTMLReportExporterCore.csproj
+++ b/Plugins/ImportExport/HTMLReportExporter/HTMLReportExporterCore/HTMLReportExporterCore.csproj
@@ -57,18 +57,18 @@
       <Link>Utils.cs</Link>
     </Compile>
     <Compile Include="HTMLReportExporterCore.cs" />
-    <Compile Include="HTMLReportExporterForm.cs">
+    <Compile Include="HtmlReportTemplateForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="HTMLReportExporterForm.Designer.cs">
-      <DependentUpon>HTMLReportExporterForm.cs</DependentUpon>
+    <Compile Include="HtmlReportTemplateForm.Designer.cs">
+      <DependentUpon>HtmlReportTemplateForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TDLHtmlReportControls.cs">
+    <Compile Include="HtmlReportControls.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="TDLHtmlReportControls.Designer.cs">
-      <DependentUpon>TDLHtmlReportControls.cs</DependentUpon>
+    <Compile Include="HtmlReportControls.Designer.cs">
+      <DependentUpon>HtmlReportControls.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -77,8 +77,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="HTMLReportExporterForm.resx">
-      <DependentUpon>HTMLReportExporterForm.cs</DependentUpon>
+    <EmbeddedResource Include="HtmlReportTemplateForm.resx">
+      <DependentUpon>HtmlReportTemplateForm.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
