--- a/Plugins/ImportExport/HTMLReportExporter/HTMLReportExporterCore/HTMLReportExporterCore.csproj
+++ b/Plugins/ImportExport/HTMLReportExporter/HTMLReportExporterCore/HTMLReportExporterCore.csproj
@@ -38,6 +38,9 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HtmlAgilityPack">
+      <HintPath>..\..\..\3rdParty\HtmlAgilityPack\HtmlAgilityPack.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.mshtml, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
