Add menu for activating task views

--- a/core/ToDoList/ToDoList.rc
+++ b/core/ToDoList/ToDoList.rc
@@ -1533,7 +1533,7 @@ END
 IDD_TDLIMPORTEXPORT_DIALOG DIALOGEX 0, 0, 400, 289
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Import Tasks from Tasklist"
-FONT 8, "Tahoma"
+FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,289,268,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,344,268,50,14
@@ -3111,7 +3111,78 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "T&oggle between Task Tree and List View", 
                                                 ID_VIEW_TOGGLETREEANDLIST
+        MENUITEM "To&ggle between Tasks and Comments", 
+                                                ID_VIEW_TOGGLETASKSANDCOMMENTS
+
+        MENUITEM SEPARATOR
         MENUITEM "Next Task Vie&w",             ID_VIEW_CYCLETASKVIEWS
+        POPUP "Activate &Task View"
+        BEGIN
+            MENUITEM "&Task Tree",              ID_ACTIVATEVIEW_TASKTREE
+            MENUITEM "&List View",              ID_ACTIVATEVIEW_LISTVIEW
+            MENUITEM "Task View 1",        ID_ACTIVATEVIEW_UIEXTENSION1
+
+            MENUITEM "Task View 2",        ID_ACTIVATEVIEW_UIEXTENSION2
+
+            MENUITEM "Task View 3",        ID_ACTIVATEVIEW_UIEXTENSION3
+
+            MENUITEM "Task View 4",        ID_ACTIVATEVIEW_UIEXTENSION4
+
+            MENUITEM "Task View 5",        ID_ACTIVATEVIEW_UIEXTENSION5
+
+            MENUITEM "Task View 6",        ID_ACTIVATEVIEW_UIEXTENSION6
+
+            MENUITEM "Task View 7",        ID_ACTIVATEVIEW_UIEXTENSION7
+
+            MENUITEM "Task View 8",        ID_ACTIVATEVIEW_UIEXTENSION8
+
+            MENUITEM "Task View 9",        ID_ACTIVATEVIEW_UIEXTENSION9
+
+            MENUITEM "Task View 10",       ID_ACTIVATEVIEW_UIEXTENSION10
+
+            MENUITEM "Task View 11",       ID_ACTIVATEVIEW_UIEXTENSION11
+
+            MENUITEM "Task View 12",       ID_ACTIVATEVIEW_UIEXTENSION12
+
+            MENUITEM "Task View 13",       ID_ACTIVATEVIEW_UIEXTENSION13
+
+            MENUITEM "Task View 14",       ID_ACTIVATEVIEW_UIEXTENSION14
+
+            MENUITEM "Task View 15",       ID_ACTIVATEVIEW_UIEXTENSION15
+
+            MENUITEM "Task View 16",       ID_ACTIVATEVIEW_UIEXTENSION16
+
+        END
+        POPUP "Task View &Visibility"
+        BEGIN
+            MENUITEM "&Task Tree",                  ID_SHOWVIEW_TASKTREE
+            , CHECKED, GRAYED
+            MENUITEM SEPARATOR
+            MENUITEM "List View",                   ID_SHOWVIEW_LISTVIEW
+            MENUITEM "Task View 1",      ID_SHOWVIEW_UIEXTENSION1
+            MENUITEM "Task View 2",      ID_SHOWVIEW_UIEXTENSION2
+            MENUITEM "Task View 3",      ID_SHOWVIEW_UIEXTENSION3
+            MENUITEM "Task View 4",      ID_SHOWVIEW_UIEXTENSION4
+            MENUITEM "Task View 5",      ID_SHOWVIEW_UIEXTENSION5
+            MENUITEM "Task View 6",      ID_SHOWVIEW_UIEXTENSION6
+            MENUITEM "Task View 7",      ID_SHOWVIEW_UIEXTENSION7
+            MENUITEM "Task View 8",      ID_SHOWVIEW_UIEXTENSION8
+            MENUITEM "Task View 9",      ID_SHOWVIEW_UIEXTENSION9
+            MENUITEM "Task View 10",     ID_SHOWVIEW_UIEXTENSION10
+
+            MENUITEM "Task View 11",     ID_SHOWVIEW_UIEXTENSION11
+
+            MENUITEM "Task View 12",     ID_SHOWVIEW_UIEXTENSION12
+
+            MENUITEM "Task View 13",     ID_SHOWVIEW_UIEXTENSION13
+
+            MENUITEM "Task View 14",     ID_SHOWVIEW_UIEXTENSION14
+
+            MENUITEM "Task View 15",     ID_SHOWVIEW_UIEXTENSION15
+
+            MENUITEM "Task View 16",     ID_SHOWVIEW_UIEXTENSION16
+
+        END
         MENUITEM SEPARATOR
         POPUP "Task &View Font"
         BEGIN
@@ -3122,10 +3193,6 @@ BEGIN
             MENUITEM "Restore &Default Font Size",  ID_VIEW_RESTOREDEFAULTTASKVIEWFONTSIZE
 
         END
-        MENUITEM SEPARATOR
-        MENUITEM "To&ggle between Tasks and Comments", 
-                                                ID_VIEW_TOGGLETASKSANDCOMMENTS
-
         MENUITEM SEPARATOR
         MENUITEM "&Previous TaskList",          ID_VIEW_PREV
         MENUITEM "&Next TaskList",              ID_VIEW_NEXT
@@ -3212,7 +3279,7 @@ BEGIN
             , GRAYED
             MENUITEM "Filter 22",                   ID_VIEW_ACTIVATEFILTER22
             , GRAYED
-            MENUITEM "Filter 23",                   ID_VIEW_ACTIVATEFILTER23
+            MENUITEM "Filter 23",                   ID_ACTIVATEVIEW_UIEXTENSION5
             , GRAYED
             MENUITEM "Filter 24",                   ID_VIEW_ACTIVATEFILTER24
             , GRAYED
@@ -3221,36 +3288,6 @@ BEGIN
         MENUITEM "Show Time Trac&ker",          ID_VIEW_SHOWTIMETRACKER
         MENUITEM "Show Reminder &Notification Window", ID_VIEW_SHOWREMINDERS
         MENUITEM SEPARATOR
-        POPUP "Task View &Visibility"
-        BEGIN
-            MENUITEM "&Task Tree",                  ID_SHOWVIEW_TASKTREE
-            , CHECKED, GRAYED
-            MENUITEM SEPARATOR
-            MENUITEM "List View",                   ID_SHOWVIEW_LISTVIEW
-            MENUITEM "Task View Visibility 1",      ID_SHOWVIEW_UIEXTENSION1
-            MENUITEM "Task View Visibility 2",      ID_SHOWVIEW_UIEXTENSION2
-            MENUITEM "Task View Visibility 3",      ID_SHOWVIEW_UIEXTENSION3
-            MENUITEM "Task View Visibility 4",      ID_SHOWVIEW_UIEXTENSION4
-            MENUITEM "Task View Visibility 5",      ID_SHOWVIEW_UIEXTENSION5
-            MENUITEM "Task View Visibility 6",      ID_SHOWVIEW_UIEXTENSION6
-            MENUITEM "Task View Visibility 7",      ID_SHOWVIEW_UIEXTENSION7
-            MENUITEM "Task View Visibility 8",      ID_SHOWVIEW_UIEXTENSION8
-            MENUITEM "Task View Visibility 9",      ID_SHOWVIEW_UIEXTENSION9
-            MENUITEM "Task View Visibility 10",     ID_SHOWVIEW_UIEXTENSION10
-
-            MENUITEM "Task View Visibility 11",     ID_SHOWVIEW_UIEXTENSION11
-
-            MENUITEM "Task View Visibility 12",     ID_SHOWVIEW_UIEXTENSION12
-
-            MENUITEM "Task View Visibility 13",     ID_SHOWVIEW_UIEXTENSION13
-
-            MENUITEM "Task View Visibility 14",     ID_SHOWVIEW_UIEXTENSION14
-
-            MENUITEM "Task View Visibility 15",     ID_SHOWVIEW_UIEXTENSION15
-
-            MENUITEM "Task View Visibility 16",     ID_SHOWVIEW_UIEXTENSION16
-
-        END
         MENUITEM SEPARATOR
         POPUP "Bar &Visibility"
         BEGIN
@@ -5514,10 +5551,10 @@ BEGIN
     IDS_REPLACEINTASKCOMMENTS "Replace in Task Comments"
     IDS_FINDINTASKCOMMENTS  "Find in Task Comments"
     IDS_SEARCHPREFS_PROMPT  "Search Preferences"
+    IDS_SD_TITLE            "Remote Server Details"
     IDS_CAD_FRACTION        "Number (Fraction eg. 2/3)"
     IDS_CUSTOM_FEATURE_PERCENTAGE "Display as percentage"
     IDS_FILTERPLACEHOLDER   "Filters"
-    IDS_SD_TITLE            "Remote Server Details"
 END
 
 #endif    // English (Australia) resources
