--- a/core/ToDoList/ToDoList.rc
+++ b/core/ToDoList/ToDoList.rc
@@ -346,10 +346,11 @@ BEGIN
     PUSHBUTTON      "Copy &All",IDC_COPYALL,295,202,50,14
 END
 
-IDD_PREFTASK_PAGE DIALOG DISCARDABLE  0, 0, 400, 489
+IDD_PREFTASK_PAGE DIALOG DISCARDABLE  0, 0, 400, 473
 STYLE WS_CHILD
 FONT 8, "Tahoma"
 BEGIN
+    LTEXT           "-",IDC_STATIC,81,343,8,8
     LTEXT           "Time Tracking",IDC_TRACKGROUP,7,10,386,8
     CONTROL         "&Show the Time-Tracker window whenever a task's time is tracked",
                     IDC_SHOWTIMETRACKER,"Button",BS_AUTOCHECKBOX | 
@@ -393,29 +394,31 @@ BEGIN
     CONTROL         "And then stop the timer",IDC_ENDTRACKINGONREMINDER,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,18,249,378,10
     LTEXT           "Time Periods",IDC_TIMEGROUP,7,269,386,8
+    GROUPBOX        "Working Day",IDC_STATIC,7,281,375,81
     COMBOBOX        IDC_HOURSINONEDAY,18,294,48,115,CBS_DROPDOWN | 
                     WS_TABSTOP
     LTEXT           "hours",IDC_STATIC,70,296,59,8
-    EDITTEXT        IDC_DAYSINONEWEEK,18,388,48,12,ES_AUTOHSCROLL | 
-                    ES_READONLY | WS_DISABLED
-    LTEXT           "days",IDC_STATIC,70,390,60,8
+    LTEXT           "Beginning at:",IDC_STATIC,18,312,67,8
+    COMBOBOX        IDC_STARTOFDAY,87,310,48,30,CBS_DROPDOWN | 
+                    CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | 
+                    WS_TABSTOP
+    CONTROL         "Lunch break",IDC_HASLUNCHBREAK,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,18,328,117,10
+    COMBOBOX        IDC_STARTOFLUNCH,29,340,48,30,CBS_DROPDOWN | 
+                    CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | 
+                    WS_TABSTOP
+    COMBOBOX        IDC_ENDOFLUNCH,87,340,48,30,CBS_DROPDOWN | 
+                    CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | 
+                    WS_TABSTOP
+    GROUPBOX        "Working Week",IDC_STATIC,7,368,375,99
+    EDITTEXT        IDC_DAYSINONEWEEK,18,383,48,12,ES_AUTOHSCROLL | 
+                    ES_READONLY
+    LTEXT           "days",IDC_STATIC,70,385,60,8
     LTEXT           "Th&e following days represent the weekend:",IDC_STATIC,
-                    18,407,375,8
-    LISTBOX         IDC_WEEKENDS,18,419,218,43,LBS_OWNERDRAWFIXED | 
+                    18,402,352,8
+    LISTBOX         IDC_WEEKENDS,18,414,218,43,LBS_OWNERDRAWFIXED | 
                     LBS_HASSTRINGS | LBS_NOINTEGRALHEIGHT | LBS_MULTICOLUMN | 
                     LBS_DISABLENOSCROLL | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Lunch break",IDC_HASLUNCHBREAK,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,18,328,55,10
-    COMBOBOX        IDC_STARTOFLUNCH,29,340,48,30,CBS_DROPDOWN | CBS_SORT | 
-                    WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_ENDOFLUNCH,87,340,48,30,CBS_DROPDOWN | CBS_SORT | 
-                    WS_VSCROLL | WS_TABSTOP
-    LTEXT           "-",IDC_STATIC,80,343,8,8
-    GROUPBOX        "Working Day",IDC_STATIC,7,281,389,81
-    GROUPBOX        "Working Week",IDC_STATIC,7,373,389,99
-    LTEXT           "Starting at:",IDC_STATIC,18,311,38,8
-    COMBOBOX        IDC_STARTOFDAY,87,310,48,30,CBS_DROPDOWN | CBS_SORT | 
-                    WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_PREFTASKDEF_PAGE DIALOG DISCARDABLE  0, 0, 398, 432
@@ -4003,7 +4006,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 396
         TOPMARGIN, 10
-        BOTTOMMARGIN, 484
+        BOTTOMMARGIN, 468
     END
 
     IDD_PREFTASKDEF_PAGE, DIALOG
