--- a/Plugins/3rdParty/MSHtmlEditorControl/MSHTMLEditorControl.csproj
+++ b/Plugins/3rdParty/MSHtmlEditorControl/MSHTMLEditorControl.csproj
@@ -115,6 +115,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\ColorButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Classes\ColorButton.Designer.cs">
+      <DependentUpon>ColorButton.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\EditHtmlForm.Designer.cs">
       <DependentUpon>EditHtmlForm.cs</DependentUpon>
     </Compile>
